anv: Add in image->offset when setting up depth buffer

Fix from Neil Roberts.

https://bugs.freedesktop.org/show_bug.cgi?id=94348